# Fashion-Multi-Modal-Rag-System

./: .gitignore  README.md  app.py  main.py  pyproject.toml  query.py  render.yaml  requirements.txt  streamlit_app.py
app/api/: dependencies.py  main.py  routes.py
app/core/: config.py  logging.py
app/embeddings/: image_encoder.py  text_encoder.py
app/rag/: generator.py
app/reranker/: cross_encoder.py
app/retrieval/: qdrant_client.py
app/services/: fashion_service.py  pipeline.py
app/utils/: image_utils.py  text_utils.py  validators.py
experiments/: exp1.ipynb
offline_embd_ingestion/: del_embd.py  ingestion_pipeline.py
